password reset page modification

--- a/vol/templates/registration/password_reset_form.html
+++ b/vol/templates/registration/password_reset_form.html
@@ -2,13 +2,32 @@
 {% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
-  <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-    <p>{{ form.email.label_tag }}</p>
-    <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="{% trans 'Reset password' %}">
-  </form>
+
+
+<div class="col-8 offset-md-2">
+	<div class="row">
+        <h2 class="display-4 align-self-center mt-4 mb-4">{% trans "Password reset" %}</h2>
+    </div>
+
+	<div class="row">
+	    <form action="" method="post">
+	        {% csrf_token %}
+	        {% load widget_tweaks %}
+	        <div class="row">
+	            <div class="form-group col-12">
+	                <div class="fieldWrapper">
+					    {{ form.email.errors }}
+					    {{ form.email.label_tag }}
+					    {{ form.email|add_class:"form-control" }}
+	                </div>
+	            </div>
+	        </div>
+
+	        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">{% trans 'Reset password' %}</button>
+
+	    </form>
+	</div>
+</div>
+
+
 {% endblock %}
