--- a/vol/templates/registration/login.html
+++ b/vol/templates/registration/login.html
@@ -50,7 +50,7 @@
 
             <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">{% trans "Login" %}</button>
             <input type="hidden" name="next" value="{{ next }}">
-            <p class="mt-2 text-right"><a href="{# url 'password_reset' #}">{% trans "Password forgotten?" %}</a></p>
+            <p class="mt-2 text-right"><a href="{% url 'password_reset' %}">{% trans "Password forgotten?" %}</a></p>
 
         </form>
     </div>
