--- a/vol/templates/registration/login.html
+++ b/vol/templates/registration/login.html
@@ -12,16 +12,16 @@
 
     {% if form.errors %}
     <div class="row">
-        <div class="alert alert-danger" role="alert">{% trans "Your username and password do not match. Please try again." %}Votre nom d'utilisateur et votre mot de passe ne correspondent pas. Veuillez réessayer.</div>
+        <div class="alert alert-danger" role="alert">{% trans "Your username and password do not match. Please try again." %}</div>
     </div>
     {% endif %}
 
     {% if next %}
     <div class="row">
         {% if user.is_authenticated %}
-        <div class="alert alert-danger" role="alert">{% trans "Your account does not have access to this page. To continue, please login with an account that has access to it." %}Votre compte n'a pas accès à cette page. Pour continuer, veuillez vous connecter avec un compte qui y a accès.</div>
+        <div class="alert alert-danger" role="alert">{% trans "Your account does not have access to this page. To continue, please login with an account that has access to it." %}</div>
         {% else %}
-        <div class="alert alert-danger" role="alert">{% trans "Please login to view this page." %}Veuillez vous connecter pour voir cette page.</div>
+        <div class="alert alert-danger" role="alert">{% trans "Please login to view this page." %}</div>
         {% endif %}
     </div>
     {% endif %}
