Profile page modification

--- a/vol/templates/vol/prices.html
+++ b/vol/templates/vol/prices.html
@@ -12,7 +12,7 @@
 {% block content %}
 
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Money money money</h1>
+    <h1 class="display-4">Different plans for every need</h1>
 </div>
 
 <div class="row">
