--- a/vol/templates/vol/homepage.html
+++ b/vol/templates/vol/homepage.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <p>Cette application vous permettra de saisir et sauvegarder vos heures de vol de manière simple et sécurisée.</p>
+            <p class="lead">Cette application vous permettra de saisir et sauvegarder vos heures de vol de manière simple et sécurisée.</p>
             {% lorem 3 p %}
         </div>
     </div>
