--- a/management/templates/management/base_homepage.html
+++ b/management/templates/management/base_homepage.html
@@ -38,7 +38,7 @@
     <body>
 
         <main role="main">
-            <h1><a href="{% url 'index' %}">{% trans "Management Dashboard" %}</a></h1>
+            <h1><a href="{% url 'management_index' %}">{% trans "Management Dashboard" %}</a></h1>
 
             <ul>
                 <li><a href="{% url 'website_performance' %}">{% trans "Website performance" %}</a></li>
