--- a/management/templates/management/management_index.html
+++ b/management/templates/management/management_index.html
@@ -6,4 +6,16 @@
 
 <h1>{% trans "Github Issues" %}</h1>
 
+<h1>{% trans "Total amout of customer" %}</h1>
+{{ customer }}
+
+<h1>{% trans "New customer in the last month" %}</h1>
+{{ new_number_customer_pre_month }}
+
+<h1>{% trans "Total amount of flights" %}</h1>
+{{ flights }}
+
+<h1>{% trans "Website visitors" %}</h1>
+
+
 {% endblock %}
