--- a/vol/templates/vol/base_homepage.html
+++ b/vol/templates/vol/base_homepage.html
@@ -38,25 +38,53 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">{% trans "Home" %}</a>
+
+            <a class="navbar-brand" href="/">{% trans "Dashboard" %}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
-                    {% block active_nav %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'prices' %}">{% trans "Pricing" %}</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'documentation' %}">{% trans "Documentation" %}</a>
-                    </li>
-                    {% endblock %}
                 {% if user.is_authenticated %}
+                    {% if request.path == '/somme' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">{% trans "Flights" %}</a>
+                        <a class="nav-link" href="{% url 'flight_list' %}">{% trans "All flights" %}</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'somme' %}">{% trans "Totals" %}</a>
+                    </li>
+                    {% elif request.path == '/vols' %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'flight_list' %}">{% trans "All flights" %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'somme' %}">{% trans "Totals" %}</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flight_list' %}">{% trans "All flights" %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'somme' %}">{% trans "Totals" %}</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Add" %}</a>
+                        <div class="dropdown-menu">
+                          <a class="dropdown-item" href="{% url 'new_pilote' %}">{% trans "Pilot" %}</a>
+                          <a class="dropdown-item" href="{% url 'new_immatriculation' %}">{% trans "Registration" %}</a>
+                          <a class="dropdown-item" href="{% url 'new_code_iata' %}">{% trans "Airport" %}</a>
+                          <a class="dropdown-item" href="{% url 'new_type_avion' %}">{% trans "Aircraft Type" %}</a>
+                        </div>
+                    </li>
+                    
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-primary" href="{% url 'new_vol' %}">{% trans "New flight" %}</a>
                     </li>
                 </ul>
+                
                 <span class="navbar-text">
                     {% blocktrans with username=user.username%} Hello {{ username }} {% endblocktrans %}
                 </span>
@@ -78,27 +106,6 @@
         </nav>
 
     <main role="main" class="container mb-5 mt-2">
-        {% block active_secondary_nav %}
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">{% trans "All flights" %}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'somme' %}">{% trans "Totals" %}</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Add" %}</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="{% url 'new_vol' %}">{% trans "Flight" %}</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'new_pilote' %}">{% trans "Pilot" %}</a>
-                  <a class="dropdown-item" href="{% url 'new_immatriculation' %}">{% trans "Plane" %}</a>
-                  <a class="dropdown-item" href="{% url 'new_code_iata' %}">{% trans "Airport" %}</a>
-                  <a class="dropdown-item" href="{% url 'new_type_avion' %}">{% trans "Aircraft Type" %}</a>
-                </div>
-            </li>
-        </ul>
-        {% endblock %}
 
         {% block content %}{% endblock %}
     </main>
