--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -112,7 +112,7 @@
         <div class="col-md-3">
 			<div class="card">
 				<div class="card-header">
-					{% trans "Top 3 airports"%}
+					{% trans "Top 3 destination"%}
 				</div>
 				<div class="card-body">
 
